# distillationCenterNet

./: environment.yml  pyproject.toml
config/: baseline.yaml  coco.yaml  default.yaml  teacher.yaml
config/data/: labelled_only.yaml  semi_supervised.yaml
config/experiments/: attention_semi.yaml  logit_bce_labelled.yaml  logit_bce_semi.yaml  logit_kl_labelled.yaml  logit_kl_semi.yaml  logit_mse_labelled.yaml  logit_mse_semi.yaml  pseudo_semi.yaml
config/methods/: attention.yaml  logit_bce.yaml  logit_kl.yaml  logit_mse.yaml  pseudo.yaml
scripts/: compare.py  evaluate.py  experiments.py
scripts/train/: baseline.py  student.py  teacher.py
src/config/: resolve.py
src/data/: coco.py  collate.py  datasets.py  io.py  paths.py  streams.py  targets.py  transforms.py
src/engine/: checkpoint.py  distiller.py  early_stop.py  finalize.py  loop.py  optim.py  report.py  seeding.py  trainer.py
src/evaluation/: decode.py  metrics.py
src/kd/: base.py  methods.py  registry.py  signals.py
src/losses/: ops.py  supervised.py
src/models/: backbone.py  centernet.py  heads.py  neck.py  teacher.py
src/runners/: baseline.py  common.py  evaluate.py  experiments.py  student.py  teacher.py
src/tracking/: local.py  run_logger.py  wandb.py
